--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
             console.log(test);
             console.log(test.number);
-            console.log(test.boolean);
+            console.log(test.boolean());
         </script>
     </body>
 </html>
