--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 }
             };
             
-            stringify = JSON.stringify(test);
-            parse = JSON.parse(test);
+            // stringify = JSON.stringify(test);
+            // parse = JSON.parse(test);
 
             var test_2 = [
                 {
@@ -47,8 +47,8 @@
             console.log(test.object.key);
             console.log(test.object.array[0]);
             
-            console.log(stringify);
-            console.log(parse);
+            // console.log(stringify);
+            // console.log(parse);
 
             var output = '';
             for(var i = 0; i < test_2.length; i++){
