--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     </head>
     <body>
 
-        <ul id="test_2"></ul>
+        <div id="json">
+            <h1>JSON</h1>
+            <ul id="test_2"></ul>
+        </div>
 
         <script>
             var test = {
